--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.lang
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.lang
@@ -263,3 +263,38 @@ fluid.molten_vanadium=熔融钒
 fluid.apple_juice=苹果汁
 fluid.golden_apple_juice=金苹果汁
 fluid.ethene=乙烯
+
+//foods
+item.apple_drops.name=苹果糖
+item.apple_jam_bun.name=苹果酱面包
+item.golden_apple_drops.name=金苹果糖
+item.golden_apple_jam_bun.name=金苹果酱面包
+
+//tools
+item.axebronze.name=青铜斧
+item.axetungsten_steel.name=钨钢斧
+item.axehss.name=高速钢斧
+item.bronze_sword.name=青铜剑
+item.tungsten_steel_sword.name=钨钢剑
+item.hss_sword.name=高速钢剑
+item.stone_hammer.name=石锤
+item.bronze_hammer.name=青铜锤
+item.iron_hammer.name=铁锤
+
+//item
+item.monocrystalline_silicon.name=单晶硅
+item.wafer.name=晶圆
+item.etched_wafer.name=蚀刻晶圆
+item.i7_8700k.name=芯片
+item.plate_pe.name=塑料板
+item.pcb.name=电路板
+item.capacitor.name=电容
+item.resistor.name=电阻
+item.laser.name=激光发生器
+item.clay_brick.name=粘土砖
+item.fire_brick.name=石墨耐火转
+item.plasma_generator.name=等离子发生器
+item.dsb.name=钻石锯片
+item.hsb.name=高速钢锯片
+item.brick_powder.name=红砖粉
+item.clay_mixed_with_clinker.name=掺杂熟料的粘土
