--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.lang
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.lang
@@ -164,45 +164,45 @@ item.HSSAdditive.name=高速钢添加剂
 item.SSAdditive.name=不锈钢添加剂
 
 //ore
-item.OreCopper.name=铜矿石
-item.OreBauxite.name=铝土矿石
-item.OreBauxit_Nether.name=下界铝土矿石
-item.OreChromite.name=铬铁矿石
-item.OreFerroManganese.name=锰铁矿石
-item.OreFerroManganese_Nether.name=下界锰铁矿石
-item.OreGraphite.name=石墨矿石
-item.OreGraphite_Nether.name=下界石墨矿石
-item.OreIlmenite.name=钛铁矿石
-item.OreNickel.name=镍矿石
-item.OreNolanite.name=钒铁矿石
-item.OreNolanite_Nether.name=下界钒铁矿石
-item.OrePyrolusite.name=软锰矿石
-item.OrePyrolusite_Nether.name=下界软锰矿石
-item.OreSilver.name=银矿石
-item.OreTin.name=锡矿石
-item.OreTunstite_End.name=末地白钨矿石
+tile.OreCopper.name=铜矿石
+tile.OreBauxite.name=铝土矿石
+tile.OreBauxit_Nether.name=下界铝土矿石
+tile.OreChromite.name=铬铁矿石
+tile.OreFerroManganese.name=锰铁矿石
+tile.OreFerroManganese_Nether.name=下界锰铁矿石
+tile.OreGraphite.name=石墨矿石
+tile.OreGraphite_Nether.name=下界石墨矿石
+tile.OreIlmenite.name=钛铁矿石
+tile.OreNickel.name=镍矿石
+tile.OreNolanite.name=钒铁矿石
+tile.OreNolanite_Nether.name=下界钒铁矿石
+tile.OrePyrolusite.name=软锰矿石
+tile.OrePyrolusite_Nether.name=下界软锰矿石
+tile.OreSilver.name=银矿石
+tile.OreTin.name=锡矿石
+tile.OreTunstite_End.name=末地白钨矿石
 
 //crushedore
-item.CrushedCopper.name=粉碎铜矿石
-item.CrushedFerroManganese.name=粉碎锰铁矿石
-item.CrushedGold.name=粉碎金矿石
-item.CrushedBauxite.name=粉碎铝土矿石
-item.CrushedChromite.name=粉碎铬铁矿石
-item.CrushedIlmenite.name=粉碎钛铁矿石
-item.CrushedIron.name=粉碎铁矿石
-item.CrushedNickel.name=粉碎镍矿石
-item.CrushedNolanite.name=粉碎钒铁矿石
-item.CrushedPyrolusite.name=粉碎软锰矿石
-item.CrushedSilver.name=粉碎银矿石
-item.CrushedTin.name=粉碎锡矿石
-item.CrushedTunstite.name=粉碎白钨矿石
+item.OreCopper_Crushed.name=粉碎铜矿石
+item.OreFerroManganese_Crushed.name=粉碎锰铁矿石
+item.OreGold_Crushed.name=粉碎金矿石
+item.OreBauxite_Crushed.name=粉碎铝土矿石
+item.OreChromite_Crushed.name=粉碎铬铁矿石
+item.OreIlmenite_Crushed.name=粉碎钛铁矿石
+item.OreIron_Crushed.name=粉碎铁矿石
+item.OreNickel_Crushed.name=粉碎镍矿石
+item.OreNolanite_Crushed.name=粉碎钒铁矿石
+item.OrePyrolusite_Crushed.name=粉碎软锰矿石
+item.OreSilver_Crushed.name=粉碎银矿石
+item.OreTin_Crushed.name=粉碎锡矿石
+item.OreTunstite_Crushed.name=粉碎白钨矿石
 
 //motor
-item.MotorLv1.name=低压感应马达
-item.MotorLv2.name=中压感应马达
-item.MotorLv3.name=高压感应马达
-item.MotorLv4.name=脉冲马达
-item.MotorLv5.name=伺服马达
+item.Motorlv1.name=低压感应马达
+item.Motorlv2.name=中压感应马达
+item.Motorlv3.name=高压感应马达
+item.Motorlv4.name=脉冲马达
+item.Motorlv5.name=伺服马达
 
 //oreconcentrate
 item.OreCopper_Concentrate.name=铜精矿
@@ -220,26 +220,26 @@ item.OreTin_Concentrate.name=锡精矿
 item.OreSilver_Concentrate.name=银精矿
 
 //oreblock
-item.BlockAluminum.name=铝块
-item.BlockCopper.name=铜块
-item.BlockTin.name=锡块
-item.BlockBronze.name=青铜块
-item.BlockTitanium.name=钛块
-item.BlockTungsten.name=钨块
-item.BlockHss.name=高速钢块
-item.BlockStainless_Steel.name=不锈钢块
-item.BlockTungsten_Steel.name=钨钢块
-item.BlockVanadium.name=钒块
-item.BlockChromium.name=铬块
-item.BlockSilver.name=银块
-item.BlockInvar.name=殷钢块
-item.BlockSteel.name=钢块
-item.BlockNickel.name=镍块
-item.BlockNcalloy.name=镍铬合金块
-item.BlockCobalt.name=钴块
-item.BlockManganese.name=锰块
+tile.BlockAluminum.name=铝块
+tile.BlockCopper.name=铜块
+tile.BlockTin.name=锡块
+tile.BlockBronze.name=青铜块
+tile.BlockTitanium.name=钛块
+tile.BlockTungsten.name=钨块
+tile.BlockHss.name=高速钢块
+tile.BlockStainless_Steel.name=不锈钢块
+tile.BlockTungsten_Steel.name=钨钢块
+tile.BlockVanadium.name=钒块
+tile.BlockChromium.name=铬块
+tile.BlockSilver.name=银块
+tile.BlockInvar.name=殷钢块
+tile.BlockSteel.name=钢块
+tile.BlockNickel.name=镍块
+tile.BlockNcalloy.name=镍铬合金块
+tile.BlockCobalt.name=钴块
+tile.BlockManganese.name=锰块
 
-//fluid
+//fluidbukkit
 fluid.molten_aluminum=熔融铝
 fluid.molten_bronze=熔融青铜
 fluid.molten_chromium=熔融铬
@@ -263,6 +263,31 @@ fluid.molten_vanadium=熔融钒
 fluid.apple_juice=苹果汁
 fluid.golden_apple_juice=金苹果汁
 fluid.ethene=乙烯
+
+//fluid
+tile.molten_aluminum.name=熔融铝
+tile.molten_bronze.name=熔融青铜
+tile.molten_chromium.name=熔融铬
+tile.molten_cobalt.name=熔融钴
+tile.molten_copper.name=熔融铜
+tile.molten_ferrochrome.name=熔融铬铁
+tile.molten_gold.name=熔融金
+tile.molten_hss.name=熔融高速钢
+tile.molten_invar.name=熔融殷钢
+tile.molten_iron.name=熔融铁
+tile.molten_manganese.name=熔融锰
+tile.molten_ncalloy.name=熔融镍铬合金
+tile.molten_nickel.name=熔融镍
+tile.molten_silver.name=熔融银
+tile.molten_ss.name=熔融不锈钢
+tile.molten_steel.name=熔融钢
+tile.molten_tin.name=熔融锡
+tile.molten_titanium.name=熔融钛
+tile.molten_tungsten.name=熔融钨
+tile.molten_vanadium.name=熔融钒
+tile.apple_juice.name=苹果汁
+tile.golden_apple_juice.name=金苹果汁
+tile.ethene.name=乙烯
 
 //foods
 item.apple_drops.name=苹果糖
