--- a/src/main/resources/assets/micro_machinery/lang/en_us.lang
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.lang
@@ -163,45 +163,45 @@ item.HSSAdditive.name=HSS Additive
 item.SSAdditive.name=Stainless Steel Additive
 
 //ore
-item.OreCopper.name=Copper Ore
-item.OreBauxite.name=Bauxite Ore
-item.OreBauxit_Nether.name=Nether Bauxit Ore
-item.OreChromite.name=Chromite Ore
-item.OreFerroManganese.name=FerroManganese Ore
-item.OreFerroManganese_Nether.name=Nether FerroManganese Ore
-item.OreGraphite.name=Graphite Ore
-item.OreGraphite_Nether.name=Nether Graphite Ore
-item.OreIlmenite.name=Ilmenite Ore
-item.OreNickel.name=Nickel Ore
-item.OreNolanite.name=Nolanite Ore
-item.OreNolanite_Nether.name=Nether Nolanite Ore
-item.OrePyrolusite.name=Pyrolusite Ore
-item.OrePyrolusite_Nether.name=Nether Pyrolusite Ore
-item.OreSilver.name=Silver Ore
-item.OreTin.name=Tin Ore
-item.OreTunstite_End.name=End Tunstite Ore
+tile.OreCopper.name=Copper Ore
+tile.OreBauxite.name=Bauxite Ore
+tile.OreBauxite_Nether.name=Nether Bauxit Ore
+tile.OreChromite.name=Chromite Ore
+tile.OreFerroManganese.name=FerroManganese Ore
+tile.OreFerroManganese_Nether.name=Nether FerroManganese Ore
+tile.OreGraphite.name=Graphite Ore
+tile.OreGraphite_Nether.name=Nether Graphite Ore
+tile.OreIlmenite.name=Ilmenite Ore
+tile.OreNickel.name=Nickel Ore
+tile.OreNolanite.name=Nolanite Ore
+tile.OreNolanite_Nether.name=Nether Nolanite Ore
+tile.OrePyrolusite.name=Pyrolusite Ore
+tile.OrePyrolusite_Nether.name=Nether Pyrolusite Ore
+tile.OreSilver.name=Silver Ore
+tile.OreTin.name=Tin Ore
+tile.OreTunstite_End.name=End Tunstite Ore
 
 //crushedore
-item.CrushedCopper.name=Crushed Copper Ore
-item.CrushedFerroManganese.name=Crushed FerroManganese Ore
-item.CrushedGold.name=Crushed Gold Ore
-item.CrushedBauxite.name=Crushed Bauxite Ore
-item.CrushedChromite.name=Crushed Chromite Ore
-item.CrushedIlmenite.name=Crushed Ilmenite Ore
-item.CrushedIron.name=Crushed Iron Ore
-item.CrushedNickel.name=Crushed Nickel Ore
-item.CrushedNolanite.name=Crushed Nolanite Ore
-item.CrushedPyrolusite.name=Crushed Pyrolusite Ore
-item.CrushedSilver.name=Crushed Silver Ore
-item.CrushedTin.name=Crushed Tin Ore
-item.CrushedTunstite.name=Crushed Tunstite Ore
+item.OreCopper_Crushed.name=Crushed Copper Ore
+item.OreFerroManganese_Crushed.name=Crushed FerroManganese Ore
+item.OreGold_Crushed.name=Crushed Gold Ore
+item.OreBauxite_Crushed.name=Crushed Bauxite Ore
+item.OreChromite_Crushed.name=Crushed Chromite Ore
+item.OreIlmenite_Crushed.name=Crushed Ilmenite Ore
+item.OreIron_Crushed.name=Crushed Iron Ore
+item.OreNickel_Crushed.name=Crushed Nickel Ore
+item.OreNolanite_Crushed.name=Crushed Nolanite Ore
+item.OrePyrolusite_Crushed.name=Crushed Pyrolusite Ore
+item.OreSilver_Crushed.name=Crushed Silver Ore
+item.OreTin_Crushed.name=Crushed Tin Ore
+item.OreTunstite_Crushed.name=Crushed Tunstite Ore
 
 //motor
-item.MotorLv1.name=Induction Motor LV
-item.MotorLv2.name=Induction Motor MV
-item.MotorLv3.name=Induction Motor HV
-item.MotorLv4.name=Pulse Motor
-item.MotorLv5.name=Servo Motor
+item.Motorlv1.name=Induction Motor LV
+item.Motorlv2.name=Induction Motor MV
+item.Motorlv3.name=Induction Motor HV
+item.Motorlv4.name=Pulse Motor
+item.Motorlv5.name=Servo Motor
 
 //oreconcentrate
 item.OreCopper_Concentrate.name=Copper Ore Concentrate
@@ -219,26 +219,26 @@ item.OreTin_Concentrate.name=Tin Ore Concentrate
 item.OreSilver_Concentrate.name=Silver Ore Concentrate
 
 //oreblock
-item.BlockAluminum.name=Block of Aluminum
-item.BlockCopper.name=Block of Copper
-item.BlockTin.name=Block of Tin
-item.BlockBronze.name=Block of Bronze
-item.BlockTitanium.name=Block of Titanium
-item.BlockTungsten.name=Block of Tungsten
-item.BlockHss.name=Block of HSS
-item.BlockStainless_Steel.name=Block of Stainless Steel
-item.BlockTungsten_Steel.name=Block of Tungsten Steel
-item.BlockVanadium.name=Block of Vanadium
-item.BlockChromium.name=Block of Chromium
-item.BlockSilver.name=Block of Silver
-item.BlockInvar.name=Block of Invar
-item.BlockSteel.name=Block of Steel
-item.BlockNickel.name=Block of Nickel
-item.BlockNcalloy.name=Block of NCAlloy
-item.BlockCobalt.name=Block of Cobalt
-item.BlockManganese.name=Block of Manganese
+tile.BlockAluminum.name=Block of Aluminum
+tile.BlockCopper.name=Block of Copper
+tile.BlockTin.name=Block of Tin
+tile.BlockBronze.name=Block of Bronze
+tile.BlockTitanium.name=Block of Titanium
+tile.BlockTungsten.name=Block of Tungsten
+tile.BlockHSS.name=Block of HSS
+tile.BlockStainless_Steel.name=Block of Stainless Steel
+tile.BlockTungsten_Steel.name=Block of Tungsten Steel
+tile.BlockVanadium.name=Block of Vanadium
+tile.BlockChromium.name=Block of Chromium
+tile.BlockSilver.name=Block of Silver
+tile.BlockInvar.name=Block of Invar
+tile.BlockSteel.name=Block of Steel
+tile.BlockNickel.name=Block of Nickel
+tile.BlockNCalloy.name=Block of NCAlloy
+tile.BlockCobalt.name=Block of Cobalt
+tile.BlockManganese.name=Block of Manganese
 
-//fluid
+//fluidbukkit
 fluid.molten_aluminum=Molten Aluminum
 fluid.molten_bronze=Molten Bronze
 fluid.molten_chromium=Molten Chromium
@@ -263,6 +263,31 @@ fluid.apple_juice=Apple Juice
 fluid.golden_apple_juice=Golden Apple Juice
 fluid.ethene=Ethene
 
+//fluid
+tile.molten_aluminum.name=Molten Aluminum
+tile.molten_bronze.name=Molten Bronze
+tile.molten_chromium.name=Molten Chromium
+tile.molten_cobalt.name=Molten Cobalt
+tile.molten_copper.name=Molten Copper
+tile.molten_ferrochrome.name=Molten Ferrochrome
+tile.molten_gold.name=Molten Gold
+tile.molten_hss.name=Molten HSS
+tile.molten_invar.name=Molten Invar
+tile.molten_iron.name=Molten Iron
+tile.molten_manganese.name=Molten Manganese
+tile.molten_ncalloy.name=Molten NCAlloy
+tile.molten_nickel.name=Molten Nickel
+tile.molten_silver.name=Molten Silver
+tile.molten_ss.name=Molten Stainless Steel
+tile.molten_steel.name=Molten Steel
+tile.molten_tin.name=Molten Tin
+tile.molten_titanium.name=Molten Titanium
+tile.molten_tungsten.name=Molten Tungsten
+tile.molten_vanadium.name=Molten Vanadium
+tile.apple_juice.name=Apple Juice
+tile.golden_apple_juice.name=Golden Apple Juice
+tile.ethene.name=Ethene
+
 //foods
 item.apple_drops.name=Apple Drops
 item.apple_jam_bun.name=Apple Jam Bun
@@ -270,9 +295,9 @@ item.golden_apple_drops.name=Goldenapple Drops
 item.golden_apple_jam_bun.name=Goldenapple Jam Bun
 
 //tools
-item.axebronze.name=Bronze Axe
-item.axetungsten_steel.name=Tungsten Steel Axe
-item.axehss.name=HSS Axe
+item.bronze_axe.name=Bronze Axe
+item.tungsten_steel_axe.name=Tungsten Steel Axe
+item.hss_axe.name=HSS Axe
 item.bronze_sword.name=Bronze Sword
 item.tungsten_steel_sword.name=Tungsten Sword
 item.hss_sword.name=HSS Sword
