made a part of klinrecipe

--- a/src/main/resources/assets/micro_machinery/lang/en_us.lang
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.lang
@@ -322,3 +322,5 @@ item.dsb.name=Diamond Saw Blade
 item.hsb.name=HSS Saw Blade
 item.brick_powder.name=Brick powder
 item.clay_mixed_with_clinker.name=Clay mixed with Clinker
+
+container.klin=aaa
