true klin 99.999% ohhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

--- a/src/main/resources/assets/micro_machinery/lang/en_us.lang
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.lang
@@ -323,4 +323,9 @@ item.hsb.name=HSS Saw Blade
 item.brick_powder.name=Brick powder
 item.clay_mixed_with_clinker.name=Clay mixed with Clinker
 
+//tileentity
 container.klin=aaa
+
+//gui
+gui.fluid.name=%s
+gui.fluid.amount=%d mB
